--- a/gestion_taxis/package.json
+++ b/gestion_taxis/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "mapbox-gl": "^3.9.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
